k8s/base/web/service.yaml
---
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: web
spec:
  template:
    metadata:
      annotations:
        # Do not scale to zero - the monolith must always be available.
        autoscaling.knative.dev/minScale: "1"
    spec:
      containers:
        - name: web
          image: brdgme/web
          ports:
            - containerPort: 3000
